[workspace]
resolver = "2"
members = ["pixaxe", "pixaxe-core"]

# [patch."https://github.com/khonsulabs/kludgine"]
# kludgine = { path = "../kludgine" }
# [patch."https://github.com/khonsulabs/refuse"]
# refuse = { path = "../refuse" }
# refuse-pool = { path = "../refuse/refuse-pool" }

[workspace.dependencies]
cushy = { git = "https://github.com/khonsulabs/cushy" }
muse = { git = "https://github.com/khonsulabs/muse" }

# cushy = { path = "../cushy" }
# muse = { path = "../muse" }
